<resources>
    <string name="app_name">Smart Travel</string>
    <string name="hello_world">Hello world!</string>
	<string name="action__right_search">Setting</string>
	<string name="map_location_button">GPS location button</string>
	<string name="Flurry_API_Key">NBJD9RQZBWHGGWFNM3DZ</string>
	<string name="left_drawer_logo">left drawer edmonton logo</string>
	<string name="unknown">null</string>
	<string name="left_drawer_intersection_title">Intersection</string>
	<string name="left_drawer_Mid_Avenue_title">Mid Avenue</string>
	<string name="left_drawer_Mid_Street_title">Mid Street</string>
	<string name="left_drawer_School_Zone_title">School Zone</string>
	<string name="setting_gps_title">GPS</string>
	<string name="setting_gps_description">using GPS to improve the accuracy of location </string>
	<string name="setting_notification_title">Push Notification</string>
	<string name="setting_notification_description">allow notification about high collision rate area</string>
	<string name="setting_voice_message_title">Audio Alert</string>
	<string name="setting_voice_message_description">Allow to receive audio alert when approaching high collision risk locations, school zones, etc</string>
	<string name="setting_check_update_title">Check Update</string>
	<string name="setting_check_update_description">allow to check update automatically</string>
	<string name="setting_update_date">date update: 2015/08/05</string>
	<string name="setting_update_version">version: 0.1.0</string>
	<string name="welcome_page_logo">welcome page logo</string>
	<string name="welcome_city_img">welcome page city image</string>
	<string name="welcome_page_edmonton_logo">welcome page edmonton logo</string>
	<string name="copyright_txt">\@2015 City of Edmonton. All rights reserved.</string>
	<string name="drawerlist_item_count_description">count the collision</string>
	<string name="info_box_reason">Default Reason for HotSpot, no specific meaning, take it easy!</string>
	<string name="info_box_distance_unit">m</string>
	<string name="info_box_distance_title">Distance</string>
	<string name="action_logo_title">logo title</string>
	<string name="preferences_settings">com.aaron.smarttravel.preference_settings</string>
	<string name="preferences_setting_check_update">com.aaron.smarttravel.preference_settings.check_update</string>
	<string name="preferences_setting_notification">com.aaron.smarttravel.preference_settings.notification</string>
	<string name="preferences_setting_voice_message">com.aaron.smarttravel.preference_settings.voice_message</string>
	<string name="preferences_first_time">com.aaron.smarttravel.preference_first_time</string>
	<string name="preferences_is_driving">com.aaron.smarttravel.preference_is_driving</string>
	<string name="preferences_is_at_shanghai">com.aaon.smarttravel.preference_is_at_shanghai</string>
	<string name="introduction_description">introduction to the features</string>
	<string name="introduction_button">Got it</string>
	<string name="term_of_use_title">Term of Use</string>
	<string name="term_of_use_disagree">Not Agree</string>
	<string name="term_of_use_agree">Agree</string>
	<string name="location_setting_alert_title">Google Map Would Like to Use Your Current Location</string>
	<string name="location_setting_positive">OK</string>
	<string name="location_setting_nagetive">Don\'t Allow</string>
	<string name="bottom_info_title_Direction">Direction</string>
	<string name="bottom_info_title_Reason">Reason</string>
	<string name="bottom_info_title_Total">Total</string>
	<string name="data_update_dialog">Data is updated, restart now?</string>
	<string name="data_update_positive">Yes</string>
	<string name="data_update_nagetive">No, not now</string>
	<string name="not_driving_button">I am not driving now</string>
	<string name="radiobutton_collision">Collision</string>
	<string name="radiobutton_school">School</string>
	<string name="notification_title">Smart Travel is Running</string>
	<string name="notification_pause">pause</string>
	<string name="notification_stop">stop</string>
	<string name="actionbar_collision">High Collision Locations</string>
</resources>