<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/left_drawer_bg"
    android:layout_margin="10dp"
    android:padding="10dp">
    <ImageView 
        android:id="@+id/left_drawer_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edmonton_logo"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/left_drawer_logo"
        android:layout_margin="6dp"/>
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="5dp"
	    android:background="@color/vertical_divider_bg"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_gps_title"
            android:textSize="20sp"/>
        <RadioButton 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_gps_description"/>
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/vertical_divider_bg"
	    android:layout_marginStart="16dp"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:layout_marginEnd="16dp"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_notification_title"
            android:textSize="20sp"/>
        <RadioButton 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_notification_description"/>
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/vertical_divider_bg"
	    android:layout_marginStart="16dp"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:layout_marginEnd="16dp"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_voice_message_title"
            android:textSize="20sp"/>
        <RadioButton 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_voice_message_description"/>
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/vertical_divider_bg"
	    android:layout_marginStart="16dp"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
	    android:layout_marginEnd="16dp"/>
</LinearLayout>