<?xml version="1.0" encoding="utf-8"?> 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="fill_parent" 
     android:layout_height="match_parent"> 
     
     <com.google.android.gms.maps.MapView 
         android:id="@+id/map" 
         android:layout_width="match_parent" 
         android:layout_height="match_parent" 
         class="com.google.android.gms.maps.SupportMapFragment" /> 
    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="@drawable/welcome_page_logo2"
	    android:id="@+id/driving_mode_layout"
	    android:paddingBottom="10dp"
	    android:visibility="invisible"
	    android:orientation="vertical">
	  	<Button 
  	    android:background="@drawable/button_driving_mode"
  	    android:id="@+id/not_driving_button"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignParentTop="true"
  	    android:layout_centerHorizontal="true"
  	    android:layout_marginTop="50dp"
  	    />
	</RelativeLayout>
	<!-- <CheckBox 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="School Zone"
	    android:id="@+id/school_zone_checkbox"
	    /> -->
	<RadioGroup 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:visibility="gone"
	    android:id="@+id/radioGroup_map_layer"
	    >
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/radiobutton_collision"
	        android:id="@+id/radiobutton_collision"
	        android:checked="true"
	        />
	    <RadioButton 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/radiobutton_school"
	        android:id="@+id/radiobutton_schoolzone"
	        />
	</RadioGroup>
  	 <SlidingDrawer 
	    android:layout_width="fill_parent" 
	    android:id="@+id/SlidingDrawer" 
	    android:handle="@+id/slideHandle" 
	    android:content="@+id/contentLayout"
	    android:orientation="vertical"
    	android:layout_gravity="center_horizontal|top"
	    android:rotation="180"
	    android:visibility="invisible"
	    android:layout_height="190dp">
		<RelativeLayout
			android:id="@+id/contentLayout"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    android:rotation="180"
		    android:alpha="0.85"
		    android:background="#ffffff" >
	   
			<TextView 
			    android:id="@+id/info_box_hotspot_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/unknown"
			    android:textSize="22sp"
			    android:layout_marginBottom="10dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginStart="10dp"
			    />
			<View 
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@color/vertical_divider_bg"
			    android:layout_below="@id/info_box_hotspot_name"
			    android:id="@+id/info_box_vertical_divider"
			    />
			<TextView 
			    android:layout_width="140dp"
			    android:layout_height="wrap_content"
			    android:id="@+id/info_box_reason"
			    android:text="@string/info_box_reason"
			    android:textSize="17sp"
			    android:layout_below="@id/info_box_vertical_divider"
			    android:layout_alignParentLeft="true"
			    android:layout_alignParentStart="true"
			    android:layout_margin="10dp"
			    />
		    <View 
		        android:id="@+id/info_box_horizontal_divider"
		        android:layout_width="1dp"
		        android:layout_height="fill_parent"
		        android:layout_toRightOf="@id/info_box_reason"
		        android:layout_toEndOf="@id/info_box_reason"
		        android:layout_below="@id/info_box_vertical_divider"
		        android:background="@color/vertical_divider_bg"/>
		    <TextView 
		        android:id="@+id/info_box_distance"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/info_box_vertical_divider"
		        android:layout_toEndOf="@id/info_box_horizontal_divider"
		        android:layout_toRightOf="@id/info_box_horizontal_divider"
		        android:textSize="50sp"
		        android:text="@string/unknown"
		        android:layout_marginLeft="40dp"
		        android:layout_marginStart="40dp"
		        android:layout_marginTop="15dp"
		        android:textColor="@android:color/holo_red_dark"
		        />
		    <TextView
		        android:id="@+id/info_box_distance_unit"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/info_box_distance"
		        android:layout_toEndOf="@id/info_box_distance"
		        android:textColor="@android:color/holo_red_dark"
		        android:layout_alignBaseline="@id/info_box_distance"
		        android:text="@string/info_box_distance_unit"
		        android:textSize="18sp"
		        />
		    <TextView 
		        android:id="@+id/info_box_distance_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/info_box_distance"
		        android:layout_toEndOf="@id/info_box_horizontal_divider"
		        android:layout_toRightOf="@id/info_box_horizontal_divider"
		        android:layout_marginLeft="50dp"
		        android:layout_marginStart="50dp"
		        android:text="@string/info_box_distance_title"		       
		        />
		</RelativeLayout>
		<LinearLayout
		        android:id="@+id/slideHandle"
		        android:layout_width="match_parent"
		        android:background="@color/left_drawer_bg"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:rotation="180"
		        android:padding="4dp"
		        android:layout_height="15dp"
		        android:clickable="true">
		        <Button 
				    android:layout_width="wrap_content" 
				    android:layout_height="match_parent" 
				    android:background="@drawable/info_indicator">		    
				</Button> 	        
			</LinearLayout>
	 	
	</SlidingDrawer>
	<SlidingDrawer 
	    android:layout_width="fill_parent" 
	    android:id="@+id/bottom_SlidingDrawer" 
	    android:handle="@+id/bottom_slideHandle" 
	    android:content="@+id/bottom_contentLayout"
	    android:orientation="vertical"
    	android:layout_gravity="center_horizontal|bottom"
	    android:visibility="invisible"
	    android:layout_height="200dp">
		<LinearLayout
			android:id="@+id/bottom_contentLayout"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:padding="10dp"
		    android:alpha="0.85"
		    android:orientation="vertical"
		    android:background="#ffffff" >
			<TextView 
			    android:id="@+id/bottom_info_location_name"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:gravity="center_horizontal"
			    android:text="@string/unknown"
			    android:textSize="20sp"
			    android:layout_marginBottom="10dp"
			    android:layout_marginLeft="6dp"
			    android:layout_marginStart="6dp"
			    android:textColor="@color/horizontal_divider_bg"
			    />
			<TextView 
			    android:id="@+id/school_zone_text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:gravity="center_horizontal"
			    android:paddingTop="10dp"
			    android:layout_marginLeft="5dp"
			    android:textSize="16sp"
			    android:visibility="invisible"/>
			<LinearLayout 
			    android:id="@+id/bottom_info_item_title_bar"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@color/horizontal_divider_bg"
			    android:padding="6dp"
			    android:weightSum="10"
			    android:orientation="horizontal">
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/bottom_info_title_Direction"
			        android:textSize="16sp"
			        android:textColor="@android:color/white"
			        android:layout_weight="2"
			        />
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/bottom_info_title_Reason"
			        android:textSize="16sp"
			        android:textColor="@android:color/white"
			        android:layout_weight="7"
			        />
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/bottom_info_title_Total"
			        android:textSize="16sp"
			        android:textColor="@android:color/white"
					android:layout_weight="1"
			        />
			</LinearLayout>
			
			<ListView 
		    android:id="@+id/bottom_list"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"/>
			
			<View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/vertical_divider_bg"
	            android:layout_marginStart="6dp"
	            android:layout_marginLeft="6dp"/>
		</LinearLayout>
		<LinearLayout
		        android:id="@+id/bottom_slideHandle"
		        android:layout_width="match_parent"
		        android:background="@color/left_drawer_bg"
		        android:orientation="horizontal"
		        android:gravity="center"
		        android:rotation="180"
		        android:padding="4dp"
		        android:layout_height="15dp"
		        android:clickable="true">
		        <Button 
				    android:layout_width="wrap_content" 
				    android:layout_height="match_parent" 
				    android:background="@drawable/info_indicator">		    
				</Button> 	        
			</LinearLayout>
	 	
	</SlidingDrawer>
	
     
 </FrameLayout> 